acm-repos/kf-ci-v1/namespaces/auto-deploy/apps_v1_statefulset_test-pod.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: test-pod
  namespace: auto-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-pod
  serviceName: test-pod
  template:
    metadata:
      labels:
        app: test-pod
    spec:
      containers:
      - command:
        - tail
        - -f
        - /dev/null
        image: gcr.io/kubeflow-ci/test-worker-py3:d67009b@sha256:e96d069db00159c03b95ed1064569bcd0a78acdc691f42b5025050370949007a
        name: worker
        ports:
        - containerPort: 80
          name: web
      serviceAccount: kf-ci
      terminationGracePeriodSeconds: 10
