acm-repos/kf-ci-v1/namespaces/auto-deploy/v1_service_auto-deploy-server.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: auto-deploy
  name: auto-deploy-server
  namespace: auto-deploy
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: auto-deploy
    service: auto-deploy
  type: ClusterIP
