acm-repos/kf-ci-v1/namespaces/auto-deploy/v1_service_test-pod.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test-pod
  name: test-pod
  namespace: auto-deploy
spec:
  clusterIP: None
  ports:
  - name: web
    port: 80
  selector:
    app: test-pod
