acm-repos/kf-ci-v1/namespaces/auto-deploy/auto-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: auto-deploy
  name: auto-deploy-server
  namespace: auto-deploy
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: auto-deploy
    service: auto-deploy
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: auto-deploy
  name: auto-deploy-server
  namespace: auto-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auto-deploy
      service: auto-deploy
  template:
    metadata:
      labels:
        app: auto-deploy
        service: auto-deploy
    spec:
      containers:
      - command:
        - python
        - -m
        - kubeflow.testing.auto_deploy.server
        - serve
        - --template-folder=/app/templates
        - --deployments-dir=/cache/deployments
        - --port=80
        image: gcr.io/kubeflow-ci/auto_deploy@sha256:fff34e3cfd2d4ae03e20d2ae649c90160c906991d0d0ca32128f7843596943f4
        name: server
        resources:
          requests:
            cpu: 2
            memory: 8Gi
        volumeMounts:
        - mountPath: /app/config
          name: config
        - mountPath: /cache
          name: cache
        workingDir: /app
      - command:
        - python
        - -m
        - kubeflow.testing.auto_deploy.reconciler
        - run
        - --config-path=/app/config/deployments.yaml
        - --job-template-path=/app/config/deploy-kubeflow.yaml
        - --local-dir=/cache/auto_deploy_src
        - --deployments-dir=/cache/deployments
        image: gcr.io/kubeflow-ci/auto_deploy@sha256:fff34e3cfd2d4ae03e20d2ae649c90160c906991d0d0ca32128f7843596943f4
        name: reconciler
        resources:
          requests:
            cpu: 2
            memory: 8Gi
        volumeMounts:
        - mountPath: /app/config
          name: config
        - mountPath: /cache
          name: cache
        workingDir: /app
      - command:
        - python
        - -m
        - kubeflow.testing.auto_deploy.blueprint_reconciler
        - run
        - --pipelines-dir=/app/config/
        - --local-dir=/cache/blueprints_auto_deploy_src
        - --deployments-dir=/cache/deployments
        - --management-context=kf-ci-deployment-management
        - --tekton-context=kf-auto-deploy
        image: gcr.io/kubeflow-ci/auto_deploy@sha256:fff34e3cfd2d4ae03e20d2ae649c90160c906991d0d0ca32128f7843596943f4
        name: blueprints-reconciler
        resources:
          requests:
            cpu: 2
            memory: 8Gi
        volumeMounts:
        - mountPath: /app/config
          name: config
        - mountPath: /cache
          name: cache
        workingDir: /app
      serviceAccount: default-editor
      volumes:
      - configMap:
          name: auto-deploy-config-2bffg2b5h5
        name: config
      - emptyDir: {}
        name: cache
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
    service: auto-deploy
  name: auto-deploy-server
  namespace: auto-deploy
spec:
  gateways:
  - kubeflow/kubeflow-gateway
  hosts:
  - '*'
  http:
  - headers:
      request:
        add:
          x-forwarded-prefix: /auto_deploy
    match:
    - uri:
        prefix: /auto_deploy/
    rewrite:
      uri: /
    route:
    - destination:
        host: auto-deploy-server.auto-deploy.svc.cluster.local
        port:
          number: 80
